--- a/public/css/table.css
+++ b/public/css/table.css
@@ -1,5 +1,14 @@
-table {
+.table-container {
+    width: calc(100% - 60px);
     margin: 30px;
+    /*position: fixed;*/
+    height: calc(100% - 60px);
+}
+
+.table-scroll {
+    width: 100%;
+    overflow: auto;
+    height: 100%;
 }
 
 td,
@@ -8,10 +17,22 @@ th {
 }
 
 th {
-    padding: 5px 10px;
+    padding: 8px 10px;
     white-space: nowrap;
     text-align: left;
+    background: #f1f1f1;
+    border: 1px solid #ccc;
 }
+/*th div {
+    position: absolute;
+    background: transparent;
+    padding: 9px 25px;
+    color: #2f2b2c;
+    top: 0;
+    margin-left: -25px;
+    line-height: normal;
+}*/
+
 
 td {
     padding: 5px 10px;
