adds page selector

--- a/public/css/table.css
+++ b/public/css/table.css
@@ -33,7 +33,6 @@ th {
     line-height: normal;
 }*/
 
-
 td {
     padding: 5px 10px;
     border-top: 1px solid #ccc;
@@ -52,4 +51,27 @@ tbody tr:hover {
 
 .table-cell-number {
     text-align: right;
+}
+
+.table-pager {
+    margin: 5px 0;
+}
+
+.table-page-item {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    box-shadow: 0 0 2px #888;
+    text-align: center;
+    line-height: 20px;
+    margin: 0 10px 0 0;
+    cursor: pointer;
+}
+
+.table-page-item:hover {
+    background: #f1f1f1;
+}
+
+.table-selected-page {
+    background: #ccc;
 }
