--- a/public/css/table.css
+++ b/public/css/table.css
@@ -98,9 +98,20 @@ tbody tr:hover {
     transition: opacity .3s;
     opacity: 1;
     visibility: visible;
+    z-index: 1;
 }
 
 .table-loading-hide {
     opacity: 0;
     visibility: hidden;
+}
+
+.table-total-records {
+    position: absolute;
+    left: 50%;
+    top: 5px;
+    transform: translateX(-50%);
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
 }
