--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,12 @@ body {
     font-size: 12px;
 }
 
-select,
 input {
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
-    padding: 5px 8px;
+    padding: 2px 6px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
 }
 
 .per-page {
@@ -24,6 +25,6 @@ input {
 
 .search {
     position: absolute;
-    right: 32px;
-    top: -8px;
+    right: 2px;
+    top: 3px;
 }
